1. Add a classes for displaying a list of products in the cart; 2. Add add styles for the list of products in the shopping cart; 3. Add a button to close the list of basket items; 4. Add the functions of opening and closing the list of products in the basket; 5. Add minor improvements.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <section class="products center">
             <h1 class="products_title">Список товаров</h1>
             <div class="products_list"></div>
+            <button class="basket_close"><span class="basket_x">+</span></button>
+            <div class="basket_list"></div>
         </section>
     </main>
     <script src="scripts/main.js"></script>
