1. Add search by products (add html-code, scss-code and js-code); 2. Add the second variantfor displaying and hiding the shopping cart, and comment out the first variant(change the html-code, scss-code and js-code).

--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
 <body>
     <div class="shop show_basket">
         <header class="header center">
-            <button class="btn_cart" type="button" @click=basketOpen()>Корзина</button>
+            <form class="search" action="#" @submit.prevent="filter">
+                <input class="search__input" type="text" placeholder="Фильтр" v-model="userSearch">
+                <button class="search__btn" type="submit">Найти</button>
+            </form>
+            <button class="btn_cart" type="button" @click="showBasket=true">Корзина</button>
         </header>
         <main class="main">
             <section class="products center">
                 <h1 class="products_title">Список товаров</h1>
                 <div class="products_list">
-                    <div class="product_item" v-for="product of products" :key="product.id_product">
+                    <div class="product_item" v-for="product of filrerProducts" :key="product.id_product">
                         <img class="product_img" :src="imgCatalog" :alt="product.product_name" width="200">
                         <h3 class="product_title">{{ product.product_name }}</h3>
                         <p class="product_description">{{ product.price }}</p>
                         <button class="product_buy_btn">Купить</button>
                     </div>
                 </div>
-                <button class="basket_close" type="button" @click=basketClose()><span class="basket_x">+</span></button>
-                <div class="basket_list">
+                <button class="basket_close" type="button" @click="showBasket=false" v-show="showBasket"><span class="basket_x">+</span></button>
+                <div class="basket_list" v-show="showBasket">
                     <div class="basket_item" v-for="baskProduct of basketProducts" :key="basketProducts.id_product">
                         <div class="basket_left">
                             <img class="basket_img" :src="imgBasket" :alt="baskProduct.product_name" width="200">
