1. Generate js-code using WebPack; 2. Include in the file "index.html" instead of five js-files one js-file generated using WebPack.

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,14 @@
     <script src="https://kit.fontawesome.com/b338b864f1.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
+    <!--* Вместо пяти скриптов теперь срабатывает один скрипт, сгенерированный с помощью WebPack:
     <script src="js/ProductComponent.js" defer></script>
     <script src="js/CartComponent.js" defer></script>
     <script src="js/FilterComp.js" defer></script>
     <script src="js/ErrorComp.js" defer></script>
     <script src="js/main.js" defer></script>
+    -->
+    <script src="js/codeFromWebPack.js" defer></script>
 </head>
 <body>
     <div id="app">
